...
    @Environment(\.dismiss) private var dismiss
    @State var selection: PaymentType? // TODO: save selection in model
    
    var body: some View {
        if model.loadingState != .loaded {
            ProgressView()
                .navigationTitle("Payment info")
                .progressViewStyle(.circular)
                .task(priority: .background) { // schedule in background priority
                    if model.loadingState == .initial {
                        await model.reloadData()
                    }
                }
...
